data/all_generated_tests/raw_wast_tests/call_TypeMismatchinControlFlowInstructions_3682.wast
;; 1. **Test Description**: Invoke a function with parameters of incorrect types, then attempt to enter a block expecting the correct types.    - **Constraint**: This test checks if the implementation correctly ensures that the types of arguments passed to a function match those expected by the function signature.    - **Type Mismatch in Control Flow**: Upon exiting the block, the control flow will expect the incorrectly type-checked values, causing execution failure.

(assert_invalid
  (module
    (func (param i32) (param i32))
    (func $type-mismatch-in-block
      (block 
        (call 0 (i32.const 1) (f32.const 0.0))
      )
    )
  )
  "type mismatch"
)